--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Full Stack Web Developer</title>
+    <title>Front - End Web Developer</title>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/team.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
